# ChangeLog for app-arch/alien
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-arch/alien/ChangeLog,v 1.36 2012/09/23 08:30:10 phajdan.jr Exp $

  23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> alien-8.87.ebuild:
  x86 stable wrt bug #428842

  18 Sep 2012; Jeroen Roovers <jer@gentoo.org> alien-8.87.ebuild:
  Stable for HPPA (bug #428842).

  13 Sep 2012; Agostino Sarubbo <ago@gentoo.org> alien-8.87.ebuild:
  Stable for amd64, wrt bug #428842

  03 Jul 2012; Jeroen Roovers <jer@gentoo.org> alien-8.86.ebuild:
  Stable for HPPA (bug #418503).

  03 Jul 2012; Brent Baude <ranger@gentoo.org> alien-8.86.ebuild:
  Marking alien-8.86 ppc for bug 418503

  11 Jun 2012; Agostino Sarubbo <ago@gentoo.org> alien-8.86.ebuild:
  Stable for amd64, wrt bug #418503

  10 Jun 2012; Jeff Horelick <jdhore@gentoo.org> alien-8.86.ebuild:
  marked x86 per bug 418503

*alien-8.87 (10 Jun 2012)

  10 Jun 2012; <lordvan@gentoo.org> +alien-8.87.ebuild:
  added new version

*alien-8.86 (29 Jan 2012)

  29 Jan 2012; <lordvan@gentoo.org> -alien-8.64.ebuild, -alien-8.69.ebuild,
  -alien-8.72.ebuild, +alien-8.86.ebuild:
  removed old unstable versions, added newest version fixes bug #303865 (thanks
  to Clemmitt M. Sigler for reporting)

  21 Mar 2009; Jeroen Roovers <jer@gentoo.org> alien-8.74.ebuild:
  Stable for HPPA (bug #249918).

  18 Mar 2009; Joseph Jezak <josejx@gentoo.org> alien-8.74.ebuild:
  Marked ppc stable for bug #249918.

  25 Feb 2009; Markus Meier <maekke@gentoo.org> alien-8.74.ebuild:
  amd64/x86 stable, bug #249918

  22 Feb 2009; Tobias Klausmann <klausman@gentoo.org> alien-8.74.ebuild:
  Stable on alpha, bug #249918

*alien-8.74 (19 Feb 2009)

  19 Feb 2009; Thomas Raschbacher <lordvan@gentoo.org> +alien-8.74.ebuild:
  version bump + added dep for tar >= 1.14.91

*alien-8.72 (04 Feb 2009)

  04 Feb 2009; Patrick Lauer <patrick@gentoo.org> +alien-8.72.ebuild: