@@ -6,13 +6,13 @@ DIST alien_8.86.tar.gz 64267 SHA256 d81a046a122133d823cb5bd55a85c0cfa8f77916cee0
 DIST alien_8.87.tar.gz 64336 SHA256 3f7c752eb2f949491708f8027ec846e3910d3b0c7012036b37a2681f01d99098 SHA512 9eabbb966b09a4ed3ca165910ced291d72a94f5f9a2268fe2728b40e0140d2d23346c408bb263e804e6ad050f85b4a4c3d7e10c88e031d3709b5eef89f03bd1c WHIRLPOOL 36bb98b901ad35e0807a5c4900af5abbd49b851c226d75200c7d674d3d6ac1a8cc0029cb10650b93aa64108be9e075fa6805ddc4f5b73a55686d579e3c330870
 EBUILD alien-8.74.ebuild 828 SHA256 86d47bc73015eac85f0969c86a834b0bcb3e826033faa3f4b656041deda562b6 SHA512 683d54c60b21c7c6b96851a9d958d74fa243b54500884a6a11478d97a3140d0c4da54bd80c5b02d9aaacc2aca19dd7fbc771addecac1ae4afaceed5de9bc174c WHIRLPOOL c2a5fe7bdae7e32b72af2b6f21e89910ef620ec3ccb9d0e0a3514eb27a7961b8b19dbeac5523c6afc22a1e19819bec08ffc87c8d88d139b2274baf75d2fad3b7
 EBUILD alien-8.86.ebuild 829 SHA256 619f741c362123e020052ab965bc42e9040e1520dbc7ad86b08ba09d968a3395 SHA512 b8e542f0c527a4a81bfd0b822981ed4667ede5a5dacb66e7ec1057d55ac2454e829acbe43d6d4fc9aad3afeb3e54fbaf8d72a8ce7c91345ed0820216dad99475 WHIRLPOOL b674673fec4cfb2f10407e1c66a012dcb9ce812e87e5aa07260dc069acb347634ec59547df80bafd83459e33a39b4cbdd8a1a5ac0e4c283e41c8b9d46182e2c3
-EBUILD alien-8.87.ebuild 837 SHA256 a9bd30477603395dfdd4858225163d483cdf476a4fa036dfbf5e9c7764ea6758 SHA512 8ee27b9632d7bc906959d95266d2836826b974e2d14ffaa4642a2626775bfe4830b0f02ff94b2f8a5259281f696e6d95d35f9f024078718c2f574917722c2eeb WHIRLPOOL a351fa703284628a388f80b3db8c299ead2f2230edc0ef71b80ae4b03793d3bc328b07066fc2fe1c90e8c542cf0e305bda43484cef7fedb130018d2aef6bd3f9
-MISC ChangeLog 4944 SHA256 49d220796d1a0d70a135f98ab9dc7a7628859550dfe39954e25ab045dd9426a1 SHA512 d9d96efc902e385ff681c33404d04ddf36727fbba62559a83183a91aa9b8880bf024f0ba0095768f476b8d1804ef8d7f74825d07e4bf7a674d83c3bc715efdbe WHIRLPOOL 3a1d5e4f73fd751177e33f2f218b1b15bb86c999b8531cb3397f4f8f161fcd7fc7de280fea92640a88d57f21ca167bd2776504913869b21da64516842ed189d6
+EBUILD alien-8.87.ebuild 841 SHA256 37ac4494f1f88f77c349db91052041fbfdc10895520ebec546b363ba4d3ec719 SHA512 5dc5ae48a15630141a522311e16765bf055c4962eb2c724236cf8728595f8317c0e42449c7875fec08b361a50a159607618db48d1c1d5708cfae086d5153ab89 WHIRLPOOL 3d8f1ab986bcb0d167451749a7c27409028cb92f48062ea7602b9bf60a6e707cdbbb44adec7d515ae4a9557f725c225d5d0d9b9e540e6b370a45909285f0c263
+MISC ChangeLog 5059 SHA256 42395f02926bc8339f77ef33ab218d8e419bec9db9101972f07a6f6e8c4f35e4 SHA512 1cd1529465ca89a44a5c277728c5fd605a7fa4d0c4a8a4beeb7dc1388239bc54f7d2798fa00310c2117cc1fade9e9225301b56870875182d29fa5c714aa24aff WHIRLPOOL 479c049967909db718023de89bd360d36114e734a212a3e1d5c0d20b2d28fac7e15ffe4249bfc4bbedf0bf6b0aead74680309a4ca1d06d502d0f4f5fb1df3012
 MISC metadata.xml 198 SHA256 89e535559535075581383448592334bb8e2bf2aebfb2e0efde3eb7b06e0c170c SHA512 859c7d0fe086868a78127054633e33be7c974c8b542520c0ceda3324ddfbe31f713c0fd9d51435a0e5711ca428e780d29a660d103da89d0bf68b3f2c0d479487 WHIRLPOOL 2b5b007f150621bfae6992374da52dbd6c2b0f6bc13ae315e5ac58b6962d7a1b897022bca9a943768371e0d62b9f5e8f6b9a6c4a3ae6443206d1a25a79c5a588
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlBeyJoACgkQuUQtlDBCeQLD0gCcChhGXwM4sOMHgjLl5aKP6LGP
-sp4AnA34UkzY9X2hOoO5+Lg7dU8zQ9as
-=DVS2
+iEYEAREIAAYFAlBkCQsACgkQl5yvQNBFVTXwaACgiIITJ3DOKggdl41+o9Vj2brp
+9/UAn2t7KH9wRuyNtrB0xPpbSfNPfSW+
+=CW4y
 -----END PGP SIGNATURE-----
