@@ -4,18 +4,20 @@ Hash: SHA256
 AUX bwwhois-5.5.1-tel.patch 191 SHA256 6581860a7d1ab0fb766a18ca25b15910ed453990d017c49d81d60a2a4372e542 SHA512 c0bdcdfe2fba1ec1580a8768674b25ccb1ab6a1ecd6575ce98561ec3c1ec59fc11f76419c6c9b286714e9251214caa1df5538658286ba5aaa30574a2807e6fe4 WHIRLPOOL 1e0ece507a6f93f7974a7a6cb693ae0a127fd7f6ad8b9caaa5f1329e8444a547f5186f5d7ef2fd4972a3d376027971035aba19812373d5954f8f5c9e26f486fe
 DIST whois-5.0.tgz 43737 SHA256 e09ba56ccd5b38aacc1926dcedfc64324872acd37f79b5339c1f563146626b3a
 DIST whois-5.5.1.tgz 49773 SHA256 20a8c595b7af3951791ebe6a76854255149fcfe73fecbb37de7cfe1e755b2d26 SHA512 14f31e028d722bd91004dda80aa557c71c28b24b49c482d0e771609d8a8a2af5469d24002db8adafec53e660a0dcb8e31efd3dbe1b09bd168e8d19c194b150e2 WHIRLPOOL f9932c94718ca9d93101865b597fbbacebfe61b9e1b579abc127b7380d47f53c7b088bb3b139e01fa8f3047253b99e791cf1772c759305bc0933080481f84a21
+DIST whois-5.5.2.tgz 50008 SHA256 8ccc9107d8c0d348ddc250597ea0b5f4122076bcce5e8ef2bc32e87f77f5fc8d SHA512 ee6c1fa183fa009a6e47ec0c51815a215f29e24bd443683a2df8f02bca822cb91c5fb91148aaea37c5d9c993e2c7ad39d310c7cd9358ea6a7fa88ec2c8aaba16 WHIRLPOOL 737745a9309da3968d2f897a3fe878471624c1fb6386d7700699afb2b755f01f69e4ed09445f602203a48bcc4c3ea5c4cfbe79d64d051904e94b7ad245bf3774
 EBUILD bwwhois-5.0-r1.ebuild 795 SHA256 76480993b97c26be4814cbe5cdc0cbc9991e0c1be781260f5e89b3d7999c5c3c SHA512 9a93555f016132b2ccb776448ef908c4b42af17372c9e17967c80b0602e24c881e435c1a565bbcec5e66c8beb06be7269e1d79a12983d1edaa358b38db1c1328 WHIRLPOOL b456031beacdf4ef03b9b9546c62b69868546ce3a25d46960d32f3979f3d2b12e6ebaf3b613c6382ced9758cafbe67c5c02b889c6fcb22c4cb3e2c0fd6388c41
 EBUILD bwwhois-5.5.1.ebuild 869 SHA256 8a00d6c3f0698c28304f7fde5a0f591b8bedd3388c7c5ca0add1ed7b5355fe7b SHA512 dce48898893b4a3ce25d9954343a4162f44b5f47743bcf33d3fa9e2e1348b2a961dc0725cd5eff0472e1f55c5ecf7d14c2e8fa8298dfdaf1282fb77d3351a770 WHIRLPOOL 91361775ad9d431df8b4c8cab933033c00bf4a1876ed4b36ffa70c2e4584868bdafc308068335cbfa3a6422822bd980ecde111046d3e2d1bbe7b7fe179015492
-MISC ChangeLog 2886 SHA256 f097fb4439ded4391c59ef1e61ce37d9b538f2e7a13e785a1a98a90865357985 SHA512 c4b7eb1b5bd0ad92fe0cbbea8083d3a6c7d578b673bb54e611dc67c8c96c10e09cb6af816dbb7d939668d425c84f9b580dfc5df905dbae49360a6c2e6ae7a0e1 WHIRLPOOL 87a926804cdae57a6b07ee5d9055c8ac6642c9269d306a188593283d6e578e69c3570e2ecc3a9f67ad754076693374af11774675bf1eca9bcc35df10157fe6d3
+EBUILD bwwhois-5.5.2.ebuild 806 SHA256 44eceec77ac318615451a589a478c25d98c0e0ebe119635d8b7236f40b2ee4b8 SHA512 1d4f9265c7d50d07bb4d2b067d767207bb57643e83e5884801edb638787b2b613dfaac3decfe942f9842899face4dae302cef69015405ca14eabed71d94431b8 WHIRLPOOL 724bf78c5c280f5e93ad90312a58c8a71bc89cffc305ba8d3a6c6afd4fe15dbb27fa7d3a30b2751162e5c33dae11eaab3b25b89138f3d693dc6f149298221b51
+MISC ChangeLog 3012 SHA256 71a8b101299b738d3dfd8ac17fcd2ed420971cc16523b14ee7f555f891d0084d SHA512 9349fc4631913afec071549a9aefc70d42b32d6a100e3b6b750c9eda064c3b123d9921106168a9e10059f28112015a580564223a6ef5d40d4bae8464a55adb85 WHIRLPOOL 58f76ab21895e504b83b2acc1e48cb8a6c9c3d0340c7fa73d1cbec31df5106751e4664279667674889b76c61c0aaa9b02d3f51527be94bcbb1686018338572d4
 MISC metadata.xml 214 SHA256 0e019c1dee563e5b23815be471ae1b65fcaf721a91ec48037446d41ca787d3e5 SHA512 701b8c51f43f8660d40700929c243a2dae9f19dcbc7b8eca877e20eadc1ae2e0c84f7c7d8c3cb576055c1a49a55e9c759ef469eeda67026ce252d341937f6691 WHIRLPOOL 977119e736e0795137df14faae681f7fa07ba8297a19ef4a7d7b93de7efceaed16f7103f179a762be41b8849c33c535b55d16d2fd0ea795df0525592752e0156
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJQIVo0AAoJEMbwO6tnXQ0sZM4H/jFNo/GPWuqWncjDCtl1OGAL
-ruMxYk5ZI6L3WbkpymISQ9pWuvnaakUxKpd17lOxB3ZzRMTkBeNzy6L0xEbtrcDg
-yZe0GvkX+vTNPrq7caVPl4/3uwsIIm5mDCOA5Q6DvZMzsX1aHF/nBCpY0BYcYlQv
-6nwgbzGF+gyBak75iA/Z0Wj2iXI3dKmgF3VouW7c0rCO3aevxU2SNccJc2IrRya1
-lil5eCXeGmVlbgr44pgDQsZcVvgbHxYrwuNPHGB+u5ToPJapFI1d8euyGVZFTbBP
-jEEGIwBCSAljPwx1dnLnzVp/c5h5jrAQitnEa3HcWSX7VhTJhMhqQJAw4S2Uo6c=
-=rt4P
+iQEcBAEBCAAGBQJQYy7IAAoJEMbwO6tnXQ0skTcH/0idUpcWT6Lk4CpSpVgYivX0
+GXDOgMl6NwFahb5BRAaOPZ6e/7vbDKTGljlj3WMIu51ckUHvR5JHowqCiSMycmzC
+Q//MsDpI0DCkGP4gISE23XkLCvPJNY4M86EP1kCrdYbJ0wjJILDTgaxWXe/PUKDT
+PdbrVz9dIfWEQwlEmsHHeQc3ISsFCh4zDevGBwtpTHSibvQksFQCH2SteJvK3cbT
+s0k6yRqHm95JZ+VjoQq4wsbjJ9Uw9eUnnRdg8GXtyJ1wJ8krA1i4ArZ/MFOSed4W
+QfOBjPCt2y1lwKutw0de2v0PF59b6yMstU+AOc0rT1IC3asrQbsx6gJQb/ZocHU=
+=PYEm
 -----END PGP SIGNATURE-----
