@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/rrdtool
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.239 2012/09/15 18:18:59 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/rrdtool/ChangeLog,v 1.240 2012/09/26 15:07:00 xarthisius Exp $
+
+  26 Sep 2012; Kacper Kowalik <xarthisius@gentoo.org> rrdtool-1.4.7-r1.ebuild:
+  ppc/ppc64 stable wrt #404433
 
   15 Sep 2012; Raúl Porcel <armin76@gentoo.org> rrdtool-1.4.7-r1.ebuild:
   alpha/ia64/s390/sh/sparc stable wrt #404433
