@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/bwwhois
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/bwwhois/ChangeLog,v 1.25 2012/08/07 18:11:20 kensington Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/bwwhois/ChangeLog,v 1.26 2012/09/26 16:36:04 kensington Exp $
+
+*bwwhois-5.5.2 (26 Sep 2012)
+
+  26 Sep 2012; Michael Palimaka <kensington@gentoo.org> +bwwhois-5.5.2.ebuild:
+  Version bump.
 
 *bwwhois-5.5.1 (07 Aug 2012)
 
