@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/alien
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-arch/alien/ChangeLog,v 1.36 2012/09/23 08:30:10 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-arch/alien/ChangeLog,v 1.37 2012/09/27 08:06:31 blueness Exp $
+
+  27 Sep 2012; Anthony G. Basile <blueness@gentoo.org> alien-8.87.ebuild:
+  stable ppc, keyword ~ppc64, bug #428842
 
   23 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> alien-8.87.ebuild:
   x86 stable wrt bug #428842
